src/App.css
.bg-gradient-2 {
  background: rgb(255,207,223);
  background: linear-gradient(65deg, #99f6e4 60%, #ffcfdf 95%);
}

.active {
  color: #6366f1;
}

#social:hover {
  fill: #6366f1;
}

.text-gradient-1 {
  margin-right: 1rem;
  background-image: -webkit-gradient(linear,left top,right top,from(#8c9eff),to(#5ae5c9));
  background-image: -webkit-linear-gradient(left,#8c9eff,#8c9eff);
  background-image: linear-gradient(90deg,#8c9eff,#5ae5c9);
  background-clip: text;
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  display: inline-block;
}

.waving-hand {
  animation: wave 2.1s 0.6s infinite;
  transform-origin: 75% 75%;
  display: inline-block;
}

@keyframes wave {
  0% { transform: rotate( 0.0deg) }
   10% { transform: rotate(14.0deg) }
   20% { transform: rotate(-8.0deg) }
   30% { transform: rotate(14.0deg) }
   40% { transform: rotate(-4.0deg) }
   50% { transform: rotate(10.0deg) }
   60% { transform: rotate( 0.0deg) }
  100% { transform: rotate( 0.0deg) }
}

